<resources>
    <string name="app_name">RadioEtzion</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_comments">Comments</string>
    <string name="no_internet">No Internet Connection! Cannot Load Broadcast List!</string>
    <string name="error_getting_docstore_1" >Error in retrieving broadcast list! code:001</string>
    <string name="error_getting_docstore_2" >Error in retrieving broadcast list! code:002</string>
    <string name="error_getting_docstore_3" >Error in retrieving broadcast list! code:003</string>
    <string name="loading_broadcasts">loading broadcasts list &#8230;</string>
    <string name="request_internet_connection">Please, connect to the internet and hit refresh button above to reload</string>
    <string name="track_nowplaying">NOW PLAYING!</string>
    <string name="title_search">Search</string>
    <string name="no_internet_mp"><![CDATA[No Internet! Cannot load broadcast please connect & try again]]></string>
    <string name="err_mp_reloading">loading track delay.. RELOADING ...</string>
    <string name="err_mp_loading_next">loading track failed, LOADING NEXT ...</string>
    <string name="ok">OK</string>
    <string name="loading_selected_track">loading broadcast ...</string>
    <string name="sharing_choice">choose sharing method ...</string>
    <string name="select_track_to_share">please select a broadcast to share</string>
    <string name="dialog_share_download_title">Share / Download</string>
    <string name="dialog_share_download_message">share the link ?  or download the file to device for offline use ?</string>
    <string name="dialog_button_share">share</string>
    <string name="dialog_button_download">download</string>
    <string name="dialog_button_cancel">cancel</string>
    <string name="dialog_subtitle_broadcast_details">broadcast details</string>
    <string name="dialog_subtitle_broadcasters_participants">broadcasters / participants</string>
    <string name="dialog_subtitle_guests">guests</string>


    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a scelerisque magna, congue pretium neque. Fusce eget nunc aliquam, scelerisque nunc bibendum, sagittis augue. Ut in tristique nisi. Vivamus rutrum ut diam id faucibus.</string>
    <string name="add_comment_edittxt_content">enter comment here ...</string>
    <string name="btn_submit_comment">Submit</string>
    <string name="comment_add_enter_name">enter your name ...</string>
    <string name="loading_comments_list">Loading comments list ...</string>
    <string name="no_internet_comments">no internet connection, cannot load comments list</string>
    <string name="toast_comments_datalistempty">nothing to show, please connect to the internet and hit refresh in home screen</string>
    <string name="no_comments_found">no comments yet for this broadcast ...</string>
    <string name="dialog_add_comment_empty_fields">please fill up all required fields</string>
    <string name="dialog_add_comment_error_while_updating">error while updating comments data, please check internet connection and try again</string>
    <string name="see_more">(see more)</string>
</resources>
