<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textDirection="locale"
    android:layoutDirection="locale"

    android:background="@drawable/background_alert_share"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txtDialogMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/_16ssp"
        android:textStyle="italic|bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"

        android:textColor="@color/navbar_item_text"
        android:text="@string/dialog_share_download_message" />

    <Button
        android:id="@+id/btnDialogShare"
        android:layout_below="@id/txtDialogMsg"
        android:layout_alignStart="@id/txtDialogMsg"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="true"
        android:background="@color/lightPrimaryColor"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/navbar_item_text"
        android:text="@string/dialog_button_share"
        android:drawableStart="@drawable/ic_share_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDialogDownload"
        android:layout_below="@id/txtDialogMsg"
        android:layout_alignEnd="@id/txtDialogMsg"
        android:drawablePadding="@dimen/_10sdp"
        android:textAllCaps="true"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/navbar_item_text"
        android:text="@string/dialog_button_download"
        android:drawableStart="@drawable/ic_file_download_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDialogCancel"
        android:layout_below="@id/btnDialogShare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textAllCaps="true"
        android:background="@color/navbar_back_color"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/navbar_item_text"
        android:text="@string/dialog_button_cancel"
        android:drawableStart="@drawable/ic_cancel_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>